# AoC_2022

./: Cargo.toml  timings.xlsx
create_aoc_template/src/: main.rs
src/: bench_j1.rs  bench_j15.rs  bench_j25.rs  main.rs  produce_timings.rs
src/j1/: mod.rs
src/j10/: mod.rs
src/j11/: mod.rs
src/j12/: mod.rs
src/j13/: mod.rs
src/j14/: mod.rs
src/j15/: mod.rs  toto.txt
src/j16/: mod.rs
src/j17/: mod.rs
src/j18/: mod.rs
src/j19/: mod.rs
src/j2/: mod.rs
src/j20/: mod.rs
src/j21/: mod.rs
src/j22/: j22_test_sol.txt  mod.rs
src/j23/: mod.rs
src/j24/: mod.rs
src/j25/: mod.rs
src/j3/: mod.rs
src/j4/: mod.rs
src/j5/: mod.rs
src/j6/: mod.rs
src/j7/: mod.rs
src/j8/: mod.rs
src/j9/: mod.rs
