[package]
name = "rust_2022_advent_of_code"
version = "0.1.0"
edition = "2021"

[profile.bench]
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "j1"
path = "src/bench_j1.rs"
harness = false

[dependencies]
itertools = "0.10.5"
criterion = { version = "0.4.0", features = ["html_reports"] }
dashmap = "5.4.0"
threadpool = "1.8.1"
smallvec = "1.10.0"
regex = "1.7.0"
peg = "0.8.1"
rand = "0.8.5"